# chalintrends

./: .gitignore  README.md  constraints.txt  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  daily-prices.yml
chalintrends/: __init__.py  analytics.py  categories.py  fetch.py  live_search.py  mock_data.py  search.py  storage.py
data/: prices.csv
docs/: DEPLOYMENT_SECURITY.md  Ideas.md
docs/superpowers/plans/: 2026-04-28-chalintrends-mvp.md
docs/superpowers/specs/: 2026-04-28-chalintrends-mvp-design.md
scripts/: migrate_prices_csv.py  update_prices.py
tests/: test_analytics.py  test_categories.py  test_fetch.py  test_live_search.py  test_migrate_prices_csv.py  test_mock_data.py  test_search.py  test_storage.py
